Post NIAD-3114 refactoring: Better list first element reference (#779)
* initial refactoring changes

* return to original variable